tests/analyzer/errors/named_arg_in_bounded.rv
struct Foo {
    fn method(self, a=1) {}
}

fn main() {
    var foo = Foo{}
    var bound = foo.method
    bound(a=2)
}

